--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,19 +3,28 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px;
+    height: 80px;
     padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: transparent;
 }
 
 .header-logo {
     width: 60px;
+    height: 60px;
     background-color: rgb(0, 162, 255);
     padding: 6px;
-    margin-top: 10px;
     border-radius: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.548);
+    text-align: center;
+}
+
+.header-logo span {
+    color: white;
+    text-align: center;
+    font-size: 30px;
 }
 
 .header-logo img {
@@ -25,6 +34,5 @@
 
 .header-title {
     font-size: 22px;
-    font-weight: ;
 
 }
