Added skills cards and presentation

--- a/src/Presentation/Presentation.css
+++ b/src/Presentation/Presentation.css
@@ -1,9 +1,8 @@
 .presentation {
-    position: fixed;
-    top: 80px;
+    position: relative;
     left: 0;
     width: 100%;
-    height: 80px;
+    height: fit-content;
     padding: 10px 20px;
     text-align: center;
 }
