--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,27 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #212121;
-  background-color: #fafafa;
+  background-color: white;
   word-spacing: 1px;
-  word
+  
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
