--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,21 +3,31 @@
     top: 0;
     left: 0;
     width: 100%;
+    max-width: 100%;
     height: 80px;
     padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: transparent;
+    z-index: 9999;
+    background-color: white;
+    box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.2);
+    background-color: rgb(60,67,78);
+    color: white;
+}
+
+.header-absolute {
+    position: absolute;
 }
 
 .header-logo {
     width: 60px;
     height: 60px;
-    background-color: rgb(0, 162, 255);
-    padding: 6px;
+    background-color: rgb(255, 255, 255);
+    padding: 2px;
     border-radius: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.548);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.548);
     text-align: center;
 }
 
@@ -35,4 +45,33 @@
 .header-title {
     font-size: 22px;
 
+}
+
+.contact {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.window-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    border-radius: 100%;
+    color: black;
+}
+
+.red {
+    background-color: #ed6a5e;
+}
+
+.yellow {
+    background-color: #f5be4f;
+}
+
+.green {
+    background-color: #61c354;
 }
