--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -5,10 +5,10 @@
     width: 100%;
     max-width: 100%;
     height: 80px;
-    padding: 0 20px;
+    padding: 100px 20px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: transparent;
     background-color: white;
     background-color: rgb(118, 119, 121);
@@ -21,8 +21,9 @@
     background-color: rgb(255, 255, 255);
     padding: 2px;
     border-radius: 100%;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.548);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.233);
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .footer-logo span {
@@ -37,6 +38,19 @@
 }
 
 .footer-title {
-    font-size: 22px;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    font-size: 14px;
 
+}
+
+.link-repo {
+    color: white;
+    text-decoration: underline;
+    font-size: 14px;
+}
+
+.link-repo:hover {
+    color: rgb(0, 225, 255);
 }
