--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -9,12 +9,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: transparent;
     z-index: 9999;
     background-color: white;
-    box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.2);
-    background-color: rgb(60,67,78);
-    color: white;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    color: black;
 }
 
 .header-absolute {
@@ -27,7 +25,7 @@
     background-color: rgb(255, 255, 255);
     padding: 2px;
     border-radius: 100%;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.548);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.171);
     text-align: center;
 }
 
