--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -4,14 +4,12 @@
     left: 0;
     width: 100%;
     max-width: 100%;
-    height: 80px;
-    padding: 100px 20px;
+    padding: 80px 20px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: transparent;
-    background-color: white;
-    background-color: rgb(118, 119, 121);
+    background-color:  rgb(0, 132, 255);
     color: white;
 }
 
@@ -53,4 +51,30 @@
 
 .link-repo:hover {
     color: rgb(0, 225, 255);
+}
+
+.footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.footer-btn {
+    border: white 1px solid;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease-in-out;
+}
+
+.footer-btn:hover {
+    background-color: white;
+    border: white 1px solid;
+    color: black;
+    transition: all 0.3s ease-in-out;
 }
