--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -13,6 +13,7 @@
     background-color: white;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     color: black;
+    transition: all 0.3s ease-in-out;
 }
 
 .header-absolute {
@@ -27,6 +28,7 @@
     border-radius: 100%;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.171);
     text-align: center;
+    transition: all 0.3s ease-in-out;
 }
 
 .header-logo span {
@@ -36,7 +38,7 @@
 }
 
 .header-logo img {
-    width: 100%;
+    width: auto;
     border-radius: 100%;
 }
 
@@ -72,4 +74,16 @@
 
 .green {
     background-color: #61c354;
+}
+
+.header-scroll {
+    height: 40px;
+    transition: all 0.3s ease-in-out;
+}
+
+.header-scroll-logo {
+    width: 20px;
+    height: 20px;
+    display: none;
+    transition: all 0.3s ease-in-out;
 }
