--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -46,7 +46,7 @@
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 430px;
-    height: 350px;
+    height: 420px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,17 +104,35 @@
     margin-bottom: 10px;
 }
 
+.project-card span:before {
+    content:'';
+    width:100%;
+    height:100%;    
+    position:relative;
+    left:0;
+    top:0;
+    background:linear-gradient(transparent 150px, white);
+  }
+
 .project-card span {
     z-index: 10;
     font-size: 1rem;
     margin-bottom: 10px;
     text-align: justify;
+    height: 70px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+}
+
+.project-card span abbr {
+    text-decoration: none;
 }
 
 .card-img {
     z-index: 9;
     width: 100%;
-    height: 50%;
+    height: 55%;
     object-fit: cover;
     background-color: black;
     text-align: center;
